SONAR-8450 Use Java8 in QgateProjectFinder